resolved problem with spacing between containers

--- a/frontEnd/src/app/homepage/homepage.component.css
+++ b/frontEnd/src/app/homepage/homepage.component.css
@@ -39,7 +39,7 @@ section{
     font-weight: 800;
     letter-spacing: 3px;
     line-height: 120px;
-    margin-bottom: 30px;
+    margin-bottom: 10%;
 }
 
 .jaune h1 span{
@@ -56,6 +56,7 @@ section{
     background-image: url('./assets/fond-description-container.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 
@@ -66,6 +67,7 @@ section{
     background-image: url('./assets/fond-description-container2.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .jaune .description-container3{
@@ -75,6 +77,7 @@ section{
     background-image: url('./assets/fond-description-container3.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 
@@ -174,6 +177,7 @@ section{
     background-image: url('./assets/fond-description-container1VERT.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .vertFonce .environnement-container{
@@ -183,6 +187,7 @@ section{
     background-image: url('./assets/fond-description-container-env.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .vertFonce .environnement-container2{
@@ -192,6 +197,7 @@ section{
     background-image: url('./assets/fond-cont-env3.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .vertFonce .environnement-container3{
@@ -201,6 +207,7 @@ section{
     background-image: url('./assets/fond-cont-env2.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .vertFonce .texte1{
@@ -255,6 +262,7 @@ section{
     background-image: url('./assets/fond-bubble.svg');
     background-repeat: no-repeat; /* Empêche la duplication de l'image */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir tout le conteneur */
+    margin-bottom: 10%;
 }
 
 .bubble .sousTitres1{
@@ -264,6 +272,7 @@ section{
     margin-bottom: 3%;
     font-weight: 400;
     color: #013238;
+    
 }
 
 .bubble .texte1{
@@ -288,7 +297,7 @@ section{
     --b: 3px;   /* border thickness */
     --s: .45em; /* size of the corner */
     --color: #013238;
-    
+    margin-top: 5%;
     padding: calc(.5em + var(--s)) calc(.9em + var(--s));
     color: var(--color);
     --_p: var(--s);
@@ -318,13 +327,14 @@ section{
     letter-spacing: 2px;
     line-height: 120px;
     margin-bottom: 30px;
+     
 }
 
 .greenC p{
     font-size: 50px;
     letter-spacing: 2px;
-    margin-top: 2%;
-    margin-bottom: 3%;
+    margin-top: 15%;
+    margin-bottom: -5%;
     font-weight: 400;
     color: #dfd4fb;
 }
